# whisper_api

./: .drone.yml  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.gpu  MANIFEST.in  README.md  default.nix  docker-compose.yml  flake.nix  main.py  pyproject.toml  requirements.txt  setup.py  shell.nix
.devcontainer/: Dockerfile  devcontainer.json  download_models.py  requirements.txt
.github/: dependabot.yml
.github/workflows/: cachix.yml  codeql.yml  image.yml  nix-cache.yml
.woodpecker/: build-amd64.yml
nixos/checks/: default.nix
nixos/devShell/: default.nix
nixos/module/: default.nix
nixos/pkgs/whisper_api/: default.nix
src/whisper_api/: __init__.py  environment.py  log_setup.py  main.py  prefetch.py  version.py
src/whisper_api/api_endpoints/: endpoints.py
src/whisper_api/data_models/: data_types.py  decoder_state.py  fast_queue.py  task.py  temp_dict.py  threadsafe_dict.py
src/whisper_api/decoding/: decoder.py
src/whisper_api/frontend/: endpoints.py
src/whisper_api/frontend/static/: index.html  script.js  styles.css
static/: index.html  script.js  styles.css
test/: __init__.py  test_api.py  test_frontend.py  test_import.py
tests/: test_demo.py  test_frontend.py  test_import.py
whisper_api/: __init__.py  cli.py  convert.py  download_models.py  main.py  model_holder.py  model_loader.py  models.py  objects.py  storage.py  version.py  webserver.py
